--- a/jd2-ishop/resources/local_ru.properties
+++ b/jd2-ishop/resources/local_ru.properties
@@ -1,13 +1,18 @@
 local.locbutton.name.en = \u0430\u043D\u0433\u043B
 local.locbutton.name.ru = \u0440\u0443\u0441
-local.index.headerPage = iShop
-local.index.button.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
-local.index.button.authorization = \u0412\u043E\u0439\u0442\u0438
+local.headerPage.one = \u041F\u043E\u0434\u0430\u0440\u043A\u0438
+local.headerPage.two = \u0440\u0443\u0447\u043D\u043E\u0439 \u0440\u0430\u0431\u043E\u0442\u044B
+local.button.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+local.button.authorization = \u0412\u043E\u0439\u0442\u0438
+local.index.wood = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u0434\u0440\u0435\u0432\u0435\u0441\u0438\u043D\u044B
+local.index.leather = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u043A\u043E\u0436\u0438
+local.index.wool = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u0448\u0435\u0440\u0441\u0442\u0438
 local.authorization.headerPage = \u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u044F
 local.authorization.login = \u041B\u043E\u0433\u0438\u043D
 local.authorization.password = \u041F\u0430\u0440\u043E\u043B\u044C
 local.authorization.submit = \u0412\u043E\u0439\u0442\u0438
-local.authorization.failMessage = \u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 \u043B\u043E\u0433\u0438\u043D \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C 
+local.authorization.failMessage = \u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 \u043B\u043E\u0433\u0438\u043D \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
+local.authorization.ask.registr = \u0415\u0449\u0451 \u043D\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043B\u0438\u0441\u044C? 
 local.registration.headerPage = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 local.registration.message = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0437\u0430\u043F\u043E\u043B\u043D\u0438\u0442\u0435 \u0432\u0441\u0435 \u043F\u043E\u043B\u044F
 local.registration.login = \u041B\u043E\u0433\u0438\u043D
@@ -21,3 +26,8 @@ local.registration.failMessage = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u043
 local.registrationSuccess.headerPage = \u0412\u044B \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B!
 local.registrationSuccess.index = \u041D\u0430 \u0433\u043B\u0430\u0432\u043D\u0443\u044E \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0443
 local.registrationSuccess.authorization = \u0412\u043E\u0439\u0442\u0438
+local.products.wood = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u0434\u0440\u0435\u0432\u0435\u0441\u0438\u043D\u044B
+local.products.leather = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u043A\u043E\u0436\u0438
+local.products.wool = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u0448\u0435\u0440\u0441\u0442\u0438
+local.products.homepage = \u0413\u043B\u0430\u0432\u043D\u0430\u044F
+local.products.price = \u0426\u0435\u043D\u0430:
