--- a/jd2-ishop/resources/local_ru.properties
+++ b/jd2-ishop/resources/local_ru.properties
@@ -4,6 +4,7 @@ local.headerPage.one = \u041F\u043E\u0434\u0430\u0440\u043A\u0438
 local.headerPage.two = \u0440\u0443\u0447\u043D\u043E\u0439 \u0440\u0430\u0431\u043E\u0442\u044B
 local.button.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 local.button.authorization = \u0412\u043E\u0439\u0442\u0438
+local.button.cart = \u041A\u043E\u0440\u0437\u0438\u043D\u0430
 local.index.wood = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u0434\u0440\u0435\u0432\u0435\u0441\u0438\u043D\u044B
 local.index.leather = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u043A\u043E\u0436\u0438
 local.index.wool = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u0448\u0435\u0440\u0441\u0442\u0438
@@ -31,3 +32,8 @@ local.products.leather = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437
 local.products.wool = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u0448\u0435\u0440\u0441\u0442\u0438
 local.products.homepage = \u0413\u043B\u0430\u0432\u043D\u0430\u044F
 local.products.price = \u0426\u0435\u043D\u0430:
+local.cart.message.invitation = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0443\u0439\u0442\u0435\u0441\u044C \u0447\u0442\u043E\u0431\u044B \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0442\u043E\u0432\u0430\u0440\u044B
+local.product.add.to.cart = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0432 \u043A\u043E\u0440\u0437\u0438\u043D\u0443
+local.product.material = \u041C\u0430\u0442\u0435\u0440\u0438\u0430\u043B:
+local.product.master = \u041C\u0430\u0441\u0442\u0435\u0440:
+local.product.master.phonenumber = \u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430:
