--- a/jd2-ishop/resources/local_ru.properties
+++ b/jd2-ishop/resources/local_ru.properties
@@ -5,6 +5,7 @@ local.headerPage.two = \u0440\u0443\u0447\u043D\u043E\u0439 \u0440\u0430\u0431\u
 local.button.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 local.button.authorization = \u0412\u043E\u0439\u0442\u0438
 local.button.cart = \u041A\u043E\u0440\u0437\u0438\u043D\u0430
+local.button.signout = \u0412\u044B\u0439\u0442\u0438
 local.index.wood = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u0434\u0440\u0435\u0432\u0435\u0441\u0438\u043D\u044B
 local.index.leather = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u043A\u043E\u0436\u0438
 local.index.wool = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u0448\u0435\u0440\u0441\u0442\u0438
@@ -12,6 +13,7 @@ local.authorization.headerPage = \u0410\u0432\u0442\u043E\u0440\u0438\u0437\u043
 local.authorization.login = \u041B\u043E\u0433\u0438\u043D
 local.authorization.password = \u041F\u0430\u0440\u043E\u043B\u044C
 local.authorization.submit = \u0412\u043E\u0439\u0442\u0438
+local.authorization.errorMessage = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0437\u0430\u043F\u043E\u043B\u043D\u0438\u0442\u0435 \u0432\u0441\u0435 \u043F\u043E\u043B\u044F
 local.authorization.failMessage = \u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 \u043B\u043E\u0433\u0438\u043D \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
 local.authorization.ask.registr = \u0415\u0449\u0451 \u043D\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043B\u0438\u0441\u044C? 
 local.registration.headerPage = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
@@ -33,7 +35,16 @@ local.products.wool = \u0418\u0437\u0434\u0435\u043B\u0438\u044F \u0438\u0437 \u
 local.products.homepage = \u0413\u043B\u0430\u0432\u043D\u0430\u044F
 local.products.price = \u0426\u0435\u043D\u0430:
 local.cart.message.invitation = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u0443\u0439\u0442\u0435\u0441\u044C \u0447\u0442\u043E\u0431\u044B \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0442\u043E\u0432\u0430\u0440\u044B
+local.cart.product = \u0422\u041E\u0412\u0410\u0420
+local.cart.price = \u0426\u0415\u041D\u0410
+local.cart.quantity =\u041A\u041E\u041B\u0418\u0427\u0415\u0421\u0422\u0412\u041E
+local.cart.total = \u0418\u0422\u041E\u0413\u041E
+local.cart.emty.message = \u041A\u043E\u0440\u0437\u0438\u043D\u0430 \u043F\u043E\u043A\u0430 \u0435\u0449\u0435 \u043F\u0443\u0441\u0442\u0430
+local.cart.submit.button = \u041A\u0443\u043F\u0438\u0442\u044C
 local.product.add.to.cart = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0432 \u043A\u043E\u0440\u0437\u0438\u043D\u0443
 local.product.material = \u041C\u0430\u0442\u0435\u0440\u0438\u0430\u043B:
 local.product.master = \u041C\u0430\u0441\u0442\u0435\u0440:
 local.product.master.phonenumber = \u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430:
+local.product.popup.add.success = \u0422\u043E\u0432\u0430\u0440 \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D \u0432 \u043A\u043E\u0440\u0437\u0438\u043D\u0443
+local.product.popup.already.added = \u0422\u043E\u0432\u0430\u0440 \u0443\u0436\u0435 \u0431\u044B\u043B \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D \u0432 \u043A\u043E\u0440\u0437\u0438\u043D\u0443
+local.product.popup.button = OK
