--- a/jd2-ishop/resources/local_ru.properties
+++ b/jd2-ishop/resources/local_ru.properties
@@ -39,8 +39,9 @@ local.cart.product = \u0422\u041E\u0412\u0410\u0420
 local.cart.price = \u0426\u0415\u041D\u0410
 local.cart.quantity =\u041A\u041E\u041B\u0418\u0427\u0415\u0421\u0422\u0412\u041E
 local.cart.total = \u0418\u0422\u041E\u0413\u041E
-local.cart.emty.message = \u041A\u043E\u0440\u0437\u0438\u043D\u0430 \u043F\u043E\u043A\u0430 \u0435\u0449\u0435 \u043F\u0443\u0441\u0442\u0430
+local.cart.empty.message = \u041A\u043E\u0440\u0437\u0438\u043D\u0430 \u043F\u043E\u043A\u0430 \u0435\u0449\u0435 \u043F\u0443\u0441\u0442\u0430
 local.cart.submit.button = \u041A\u0443\u043F\u0438\u0442\u044C
+local.cart.button.delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
 local.product.add.to.cart = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0432 \u043A\u043E\u0440\u0437\u0438\u043D\u0443
 local.product.material = \u041C\u0430\u0442\u0435\u0440\u0438\u0430\u043B:
 local.product.master = \u041C\u0430\u0441\u0442\u0435\u0440:
